--- a/dashboard.html
+++ b/dashboard.html
@@ -134,7 +134,7 @@
                  <h2 class="contenedor2">¡Bienvenido Mi Amor!</h2>
             </div>
             <div>
-                <h3 style="font-size: x-large; color: black;">Hoy cumplimos 366 días juntos, 262 días hábiles llenos de amor y un año entero a tu lado... Te amo ❤️</h3>
+                <h3 style="font-size: x-large; color: black;">Hoy cumplimos 366 días juntos, 262 días hábiles llenos de amor y un año entero a tu lado... Te amo, Feliz día de San Valentín ❤️</h3>
             </div>
         </section>
 
